; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/extr_fastcgi.c_set_timeout.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/extr_fastcgi.c_set_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_fcgi_generator_t = type { %struct.TYPE_10__, %struct.TYPE_9__* }
%struct.TYPE_10__ = type { i32 }
%struct.TYPE_9__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_fcgi_generator_t*, i32, i32)* @set_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_timeout(%struct.st_fcgi_generator_t* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.st_fcgi_generator_t*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.st_fcgi_generator_t* %0, %struct.st_fcgi_generator_t** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.st_fcgi_generator_t*, %struct.st_fcgi_generator_t** %4, align 8
  %8 = getelementptr inbounds %struct.st_fcgi_generator_t, %struct.st_fcgi_generator_t* %7, i32 0, i32 0
  %9 = call i64 @h2o_timer_is_linked(%struct.TYPE_10__* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load %struct.st_fcgi_generator_t*, %struct.st_fcgi_generator_t** %4, align 8
  %13 = getelementptr inbounds %struct.st_fcgi_generator_t, %struct.st_fcgi_generator_t* %12, i32 0, i32 0
  %14 = call i32 @h2o_timer_unlink(%struct.TYPE_10__* %13)
  br label %15

15:                                               ; preds = %11, %3
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.st_fcgi_generator_t*, %struct.st_fcgi_generator_t** %4, align 8
  %18 = getelementptr inbounds %struct.st_fcgi_generator_t, %struct.st_fcgi_generator_t* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %18, i32 0, i32 0
  store i32 %16, i32* %19, align 8
  %20 = load %struct.st_fcgi_generator_t*, %struct.st_fcgi_generator_t** %4, align 8
  %21 = getelementptr inbounds %struct.st_fcgi_generator_t, %struct.st_fcgi_generator_t* %20, i32 0, i32 1
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %24, i32 0, i32 0
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %5, align 4
  %30 = load %struct.st_fcgi_generator_t*, %struct.st_fcgi_generator_t** %4, align 8
  %31 = getelementptr inbounds %struct.st_fcgi_generator_t, %struct.st_fcgi_generator_t* %30, i32 0, i32 0
  %32 = call i32 @h2o_timer_link(i32 %28, i32 %29, %struct.TYPE_10__* %31)
  ret void
}

declare dso_local i64 @h2o_timer_is_linked(%struct.TYPE_10__*) #1

declare dso_local i32 @h2o_timer_unlink(%struct.TYPE_10__*) #1

declare dso_local i32 @h2o_timer_link(i32, i32, %struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
